[package]
name = "librime-api"
version = "0.1.1+72f833d"
edition = "2021"
homepage = "https://github.com/uuhan/librime-api"
description = "librime rust bindings"
license = "UNKNOWN"
readme = "README.md"
include = [
  "Cargo.toml",
  "build.rs",
  "src/**/*",
  "wrapper.h",
  "librime/",
  "!librime/bin",
  "!librime/lib",
  "!librime/dist",
  "!librime/build",
  "!librime/deps/glog/build",
  "!librime/deps/opencc/build",
  "!librime/deps/yaml-cpp/build",
  "!librime/deps/marisa-trie/build",
  "!librime/deps/leveldb/build",
  "!librime/deps/googletest/build",
]

[lib]

[dependencies]
thiserror = "1.0.56"

[build-dependencies]
cmake = "0.1"
bindgen = "0.69"

[features]
default = ["logging"]
link-cxx = []
link-stdcxx = []
logging = []
