[package]
name = "librime-api"
version = "0.1.2+1.13.1"
edition = "2021"
homepage = "https://github.com/uuhan/librime-api"
description = "librime for rust"
readme = "README.md"
include = [
  "Cargo.toml",
  "build.rs",
  "src/**/*",
  "wrapper.h",
  "librime/",
  "!librime/bin",
  "!librime/lib",
  "!librime/dist",
  "!librime/build",
  "!librime/deps/glog/build",
  "!librime/deps/opencc/build",
  "!librime/deps/yaml-cpp/build",
  "!librime/deps/marisa-trie/build",
  "!librime/deps/leveldb/build",
  "!librime/deps/googletest/build",
]

[dependencies]
mlua-sys = { version = "0.6", features = ["lua54", "vendored"] }
thiserror = "2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.71"
cc = "1.2"

[features]
default = []
link-cxx = []
link-stdcxx = []
logging = []
